basket disign corrected on small screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -441,7 +441,7 @@ code {
 .basket-item__descr-cont{
     display: flex;
     justify-content: space-between;
-
+    width: 100%;
 }
 .basket-item__descr-subcont{
     display: flex;
@@ -610,6 +610,10 @@ code {
 }
 @media (max-width: 800px){
     /*basket start*/
+    .basket__main{
+        width: 100%;
+        margin: 0;
+    }
     .basket__main-subtotal{
         display: none;
     }
